--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -35,7 +35,7 @@
         </div>
         <div class="card-action">
           <a href="{{ url_for('add_reviews', game_id=g.id) }}" class="btn yellow accent-4">Review</a>
-          <a href="{{ url_for('edit_game', game_id=gid) }}" class="btn black">Edit</a>
+          <a href="{{ url_for('edit_game', game_id=g.id) }}" class="btn black">Edit</a>
           <a href="#modal-{{ g.id }}" class="btn red modal-trigger">Delete</a>
           <!-- Modal warning messages  -->
           <div id="modal-{{ g.id }}" class="modal">
