--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -23,8 +23,8 @@
       <div class="card green darken-2 center-align">
         <div class="card-image s12 m6 13 center-align">
           <img src="{{url_for('static', filename='image/games.png')}}">
-          {% for g in game %}
-          <span class="card-title s12 m5 13 white-text">{{ g.game_name }}</span>
+          {% for game in game %}
+          <span class="card-title s12 m5 13 white-text">{{ game.game_name }}</span>
           {% endfor %}
           {% for p in publisher  %}
           <p class="white-text"><strong>{{ p.publisher_name }}</strong></p>
@@ -34,11 +34,11 @@
           <p>Game Name</p>
         </div>
         <div class="card-action">
-          <a href="{{ url_for('add_reviews', game_id=g.id) }}" class="btn yellow accent-4">Review</a>
-          <a href="{{ url_for('edit_game', game_id=g.id) }}" class="btn black">Edit</a>
-          <a href="#modal-{{ g.id }}" class="btn red modal-trigger">Delete</a>
+          <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
+          <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
+          <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
           <!-- Modal warning messages  -->
-          <div id="modal-{{ g.id }}" class="modal">
+          <div id="modal-{{ game.id }}" class="modal">
             <div class="modal-content green darken-2 white-text">
               <h4>Are you sure you want to delete this Game?</h4>
               <p>This action cannot be undone</p>
