--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -19,16 +19,14 @@
 </div>
 <div class="row">
   {%  if publisher| length > 0 %}
+    {% for p in publisher  %}
+    {% for game in game %}
     <div class="col s12 m5 l3 transparent">
       <div class="card green darken-2 center-align">
         <div class="card-image s12 m6 13 center-align">
           <img src="{{url_for('static', filename='image/games.png')}}">
-          {% for game in game %}
           <span class="card-title s12 m5 13 white-text">{{ game.game_name }}</span>
-          {% endfor %}
-          {% for p in publisher  %}
           <p class="white-text"><strong>{{ p.publisher_name }}</strong></p>
-          {% endfor %}
         </div>
         <div class="card-content white-text">
           <p>Game Name</p>
@@ -38,18 +36,21 @@
           <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
           <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
           <!-- Modal warning messages  -->
-          <div id="modal-{{ game.id }}" class="modal">
+          <div id="modal-{{ p.id }}" class="modal">
             <div class="modal-content green darken-2 white-text">
               <h4>Are you sure you want to delete this Game?</h4>
               <p>This action cannot be undone</p>
             </div>
             <div class="modal-footer green darken-2">
-              <a href="{{ url_for('delete_game', game_id=g.id) }}" class="btn-large red col m3 ">Delete</a>
+              <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red col m3 ">Delete</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+    {% endfor %}
+    {% endfor %}
   {% endif %}
 </div>
+
 {% endblock %}
