--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -36,7 +36,7 @@
           <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
           <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
           <!-- Modal warning messages  -->
-          <div id="modal-{{ p.id }}" class="modal">
+          <div id="modal-{{ game.id }}" class="modal">
             <div class="modal-content green darken-2 white-text">
               <h4>Are you sure you want to delete this Game?</h4>
               <p>This action cannot be undone</p>
