--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -17,40 +17,40 @@
     </a>
   </div>
 </div>
-<div class="row">
-  {%  if publisher| length > 0 %}
-    {% for p in publisher  %}
-    {% for game in game %}
-    <div class="col s12 m5 l3 transparent">
-      <div class="card green darken-2 center-align">
-        <div class="card-image s12 m6 13 center-align">
-          <img src="{{url_for('static', filename='image/games.png')}}">
-          <span class="card-title s12 m5 13 white-text">{{ game.game_name }}</span>
-          <p class="white-text"><strong>{{ p.publisher_name }}</strong></p>
-        </div>
-        <div class="card-content white-text">
-          <p>Game Name</p>
-        </div>
-        <div class="card-action">
+<!--this is so that the colleagues added appear in the collapsible drop down menu-->
+{% if publisher|length > 0 %}
+<ul class="collapsible">
+  {% for p in publisher %}
+   {% for game in game %}
+   <li>
+      <div class="collapsible-header white-text blue darken-4">
+         <i class="fas fa-caret-down"></i>
+         <strong>{{ p.publisher_name }}</strong> 
+      </div>
+      <div class="collapsible-body">
+         <strong>{{ .department }}</strong>
+         <p>{{ game.game_name }}</p>
+         <div>
           <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
           <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
-          <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
-          <!-- Modal warning messages  -->
-          <div id="modal-{{ game.id }}" class="modal">
-            <div class="modal-content green darken-2 white-text">
-              <h4>Are you sure you want to delete this Game?</h4>
-              <p>This action cannot be undone</p>
+          
+            <!-- Modal for delete warning message -->
+            <div id="modal-{{ game.id }}" class="modal">
+               <div class="modal-content">
+                  <h4>Are you sure you want to delete this Game?</h4>
+                  <p>This action cannot be undone</p>
+               </div>
+               <div class="modal-footer">
+                  <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red col m3 ">Delete</a>
+                     class="btn red">Delete</a>
+               </div>
             </div>
-            <div class="modal-footer green darken-2">
-              <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red col m3 ">Delete</a>
-            </div>
-          </div>
-        </div>
+         </div>
       </div>
-    </div>
-    {% endfor %}
-    {% endfor %}
-  {% endif %}
-</div>
+   </li>
+   {% endfor %}
+  {% endfor %}
+</ul>
+{% endif %} 
 
 {% endblock %}
