--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -23,13 +23,12 @@
   {% for p in publisher %}
    {% for game in game %}
    <li>
-      <div class="collapsible-header white-text blue darken-4">
+      <div class="collapsible-header green darken-2 white-text">
          <i class="fas fa-caret-down"></i>
          <strong>{{ p.publisher_name }}</strong> 
       </div>
       <div class="collapsible-body">
-         <strong>{{ .department }}</strong>
-         <p>{{ game.game_name }}</p>
+         <strong>{{ game.game_name }}</strong>
          <div>
           <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
           <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
