--- a/gamesreviewbeta/templates/add_game.html
+++ b/gamesreviewbeta/templates/add_game.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="row card-panel green darken-2">
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{ url_for('add_game') }}">
         <!-- titles name -->
         <div class="row">
             <div class="input-field col s12 green darken-2">
